# rekal

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
bench/: locomo_eval.py
benchmarks/: .gitignore  DESIGN.md  README.md
benchmarks/questions/: fastapi.json  langgraph.json  litestar.json  marimo.json  pydantic.json  pytorch.json  sqlmodel.json  textual.json  tinygrad.json
benchmarks/runner/: bench.py
docs/: data-model.md  scoring.md
hooks/: hooks.json
hooks/handlers/: block-memory-writes.py  pre-compact.py  redirect-memory-reads.py  session-start.py  session-start.sh  shared.py  user-prompt-submit.py
rekal/: __init__.py  __main__.py  config.py  embeddings.py  hooks.py  models.py  scanner.py  scoring.py
rekal/adapters/: mcp_adapter.py  sqlite_adapter.py
rekal/adapters/tools/: __init__.py  conversations.py  core.py  introspection.py  scanner.py  smart_write.py
skills/rekal-hygiene/: SKILL.md
skills/rekal-init/: SKILL.md
skills/rekal-save/: SKILL.md
skills/rekal-usage/: SKILL.md
tests/: conftest.py  test_cli.py  test_conversation_tools.py  test_conversations.py  test_core_tools.py  test_embeddings.py  test_file_config.py  test_hooks.py  test_introspection.py  test_introspection_tools.py  test_mcp_adapter.py  test_migration.py  test_quote_fts.py  test_readonly.py  test_scanner.py  test_scanner_tools.py  test_scoring.py  test_search.py  test_smart_write.py  test_smart_write_tools.py  test_sqlite_adapter.py
