[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rekal"
dynamic = ["version"]
description = "Long-term memory MCP server for LLMs — hybrid search in a single SQLite file"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [{ name = "Jan Bjorge" }]
keywords = ["mcp", "memory", "llm", "sqlite", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "aiosqlite>=0.20.0",
    "sqlite-vec>=0.1.6",
    "fastembed>=0.4.0",
    "pydantic>=2.0.0",
]

[project.scripts]
rekal = "rekal.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "rekal/_version.py"

[tool.ruff]
target-version = "py314"
line-length = 99
extend-exclude = ["rekal/_version.py"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "TCH",
    "RUF",
    "PTH",
    "RET",
    "ARG",
    "ERA",
    "TID",
    "PL",
]
ignore = [
    "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "TCH001", "TCH002", "TCH003", "PLC0415", "ARG001"]
"rekal/adapters/tools/**" = ["TCH001", "TCH002"]
"rekal/__main__.py" = ["PLC0415"]
"rekal/embeddings.py" = ["PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["rekal"]

[tool.ty.environment]
python-version = "3.14"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["rekal"]

[tool.coverage.report]
fail_under = 100
show_missing = true
omit = ["rekal/_version.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
